--- a/book-details.html
+++ b/book-details.html
@@ -86,10 +86,13 @@
         }
 
         .introduction {
+            font-family: 'Times New Roman', serif; /* Times New Roman */
+            font-style: italic; /* Italic style */
             font-size: 1.2em;
             color: #495057;
             margin: 20px 0;
             transition: color 0.3s;
+            text-align: left; /* Better for longer text */
         }
 
         body.dark-mode .introduction { color: #b0b0b0; }
@@ -198,16 +201,16 @@
         <div class="book-cover">
             <img id="bookCover" src="" alt="">
         </div>
-        <p class="introduction" id="bookIntro">Loading introduction...</p>
+        <div class="introduction" id="bookIntro">Loading introduction...</div>
         <button class="read-button" onclick="goToViewer()">Press to Read</button>
         <button class="back-button" onclick="window.location.href='index.html'">Back to Collection</button>
     </div>
 
     <footer>
-        © <span id="current-year"></span> Iron Heist (John Colt) | <a href="mailto:ironheist6@gmail.com">ironheist6@gmail.com</a>
+        © <span id="current-year"></span> Iron Heist (John Colt) | <a href="/cdn-cgi/l/email-protection#5e372c3130363b372d2a681e39333f3732703d3133"><span class="__cf_email__" data-cfemail="2e071c01000e030f1512412e09030f0702420f0301">[email&#160;protected]</span></a>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         function getQueryParam(param) {
             const urlParams = new URLSearchParams(window.location.search);
             return decodeURIComponent(urlParams.get(param));
@@ -216,47 +219,47 @@
         const books = {
             "Garden of Grief": {
                 cover: "GOG.jpeg",
-                intro: "Enter a poet’s tender battlefield, where grief blooms into raw verse, tracing love’s scars, faith’s doubts, and the fragile light of a soul navigating darkness and dawn.",
+                intro: "Grief is not a fleeting emotion; it lingers, shapes, and transforms us in ways we often fail to comprehend. Garden of Grief is not just a collection of poems—it is a quiet confession, an attempt to put into words the weight of sorrow, the echoes of love lost, and the search for meaning in suffering.<br><br>Each poem in this book is a piece of something I have lived through. They are remnants of nights spent overthinking, of days where silence spoke louder than words, of memories that refused to fade. These pages hold the ache of longing, the rage of betrayal, and the quiet realization that grief is, in its own way, a form of love that never found its place to rest.<br><br>This collection is divided into four parts:<br><br>A Diary of My Thoughts – A raw, unfiltered descent into love, heartbreak, and the turmoil of emotions left unspoken.<br><br>Midday Blues – A reflection on faith, identity, and the realization that not all wounds can be healed.<br><br>Fading Light? – The quiet acceptance of loss, the soft unraveling of love, and the inevitable passage of time.<br><br>Dawn & Dusk – A philosophical reckoning with existence, grief, and the duality of hope and despair.<br><br>This book is not meant to provide answers. It is meant to be read by those who have felt the same weight of emotions, by those who understand what it means to carry grief like a second skin. If you have ever loved and lost, if you have ever questioned the meaning of faith, if you have ever found comfort in sadness—then this book is for you.<br><br>These words exist as a testament that I was here, that I felt, and that I refused to let grief define me, even as it shaped me.",
                 pdf: "pdfs/GARDEN OF GRIEF.pdf"
             },
             "A Diary of My Thoughts": {
                 cover: "A Diary of my thoughts.jpeg",
-                intro: "Step into a poet’s soul, where sleepless nights and burning hearts weave an intimate tapestry of love, loss, and the relentless search for light in the dark.",
+                intro: "The mind is a restless sea, its waves crashing with <b>love</b>, <b>loss</b>, and the echoes of what might have been. <b>A Diary of My Thoughts</b> is not just a collection of poems—it is an intimate unraveling of a soul’s inner tides, a raw chronicle of nights spent wrestling with longing and days haunted by hollow silence.<br><br>Each entry here is a confession scratched into the dark, penned in the sleepless hours when memories burn brightest. They speak of a heart tethered to another, of a life teetering between vitality and despair, and of words that serve as both lifeline and lament. This collection captures the masochistic pull of love, the weight of unshared pain, and the fragile hope of being remembered.<br><br><b>A Diary of My Thoughts</b> explores the depths of introspection, the sting of nostalgia, and the quiet rebellion against an ending that feels inevitable. It is for those who have lain awake with their own ghosts, who have poured their grief into ink, and who have found solace in the act of naming their shadows.<br><br>These pages are not a cure. They are a mirror for the sleepless, a diary for those who feel too much and fear they’ll fade unnoticed.",
                 pdf: "pdfs/A Diary of my Thoughts.pdf"
             },
             "Midday Blues": {
                 cover: "Midday Blues.jpeg",
-                intro: "Delve into a poet’s midday reverie, where love’s quiet ache and faith’s fragile dance unfold in lyrical whispers of hope and renewal.",
+                intro: "Grief, love, and the search for self are not fleeting moments—they are threads woven into the fabric of our existence, tugging at us when we least expect it. <b>Midday Blues</b> is not just a collection of poems—it is a quiet unraveling of the heart, a lyrical confession of longing, doubt, and the fragile dance between <b>hope</b> and <b>despair</b>.<br><br>Each poem here is a fragment of a soul laid bare. They are born from restless nights chasing memories, from days questioning faith, and from the ache of a love that lingers like an uninvited guest. This collection grapples with the weight of unreciprocated words, the erosion of identity, and the seasons of life that shift beneath our feet—sometimes offering solace, sometimes leaving us stranded.<br><br><b>Midday Blues</b> explores themes of love’s quiet destruction, the illusion of freedom, and the poet’s wrestle with faith and forgiveness. These pages are for those who have felt the sting of silence, who have sought meaning in the chaos of their own emotions, and who have found poetry in the ruins of what once was.<br><br>This is not a book of resolution. It is a companion for those who carry their blues into the midday light, searching for a muse that may never return.",
                 pdf: "pdfs/Midday Blues.pdf"
             },
             "Fading Light?": {
                 cover: "Fading Light.jpeg",
-                intro: "Embark on a tender descent into dusk, where poems of love and loss flicker like fading light, revealing the beauty and ache of life’s silent struggles.",
+                intro: "Love is a flame that warms, then consumes, leaving only embers to sift through in the dark. <b>Fading Light?</b> is not just a collection of poems—it is a tender descent into the twilight of connection, a lyrical elegy for what was, what might have been, and what lingers in the <b>silence</b>.<br><br>Each poem here is a pulse of raw emotion, tracing the arc of love’s fragile beauty and its inevitable decay. From the desperate longing of unanswered letters to the quiet torment of memories that refuse to fade, these verses capture the ache of a heart stretched thin by absence. They are written in the haze of smoke and starlight, in the wreckage of dreams, and in the fleeting warmth of a touch that no longer exists.<br><br><b>Fading Light?</b> explores the duality of vulnerability and resilience, the weight of grief, and the haunting permanence of love lost to time. This collection is for those who have stared into the void of another’s absence, who have sought solace in the ashes of their own words, and who have felt the slow dimming of a once-bright bond.<br><br>These pages don’t promise dawn. They are a mirror to the dusk within us all, a quiet companion for when the light fades and the heart still beats.",
                 pdf: "pdfs/Fading Light.pdf"
             },
             "Dawn & Dusk": {
                 cover: "Dawn & Dusk.jpeg",
-                intro: "Wander through a poet’s twilight, where dawn and dusk collide in verses of growth and grief, unveiling the fractured beauty of a soul caught between shadows and light.",
+                intro: "Life is a dance between shadow and shimmer, a fragile balance of beginnings and endings. <b>Dawn & Dusk</b> is not merely a collection of poems—it is a poetic pilgrimage through the contrasts that define us, a meditation on the <b>beauty</b> and <b>burden</b> of existence.<br><br>Each verse here is a fragment of the human soul, pieced together from moments of growth, grief, and the quiet spaces in between. They are born from the green of lost summers, the stillness of frozen rivers, and the weight of memories that linger like uninvited guests. This collection wrestles with the duality of love and hate, the curse of longing, and the faint hope that flickers even in the darkest night.<br><br><b>Dawn & Dusk</b> delves into the complexities of overthinking, the permanence of loss, and the search for light amid life’s fractured mosaics. It is for those who have felt the chill of winter’s reign, who have questioned the mercy of gods, and who have sought meaning in the ruins of what once shone.<br><br>This book offers no easy answers. It is a refuge for those navigating the twilight hours, where dawn feels distant and dusk is all too near.",
                 pdf: "pdfs/Dawn and Dusk.pdf"
             },
             "A Letdown": {
                 cover: "A Letdown.jpeg",
-                intro: "Step into a poet’s unraveling, where love’s steep price fractures the soul into haunting fragments, tracing a path of loss and self-destruction through a winter that never thaws.",
+                intro: "Love is a gamble with stakes we rarely understand until it’s too late. <b>A Letdown</b> is not merely a collection of poems—it is a raw excavation of the cost of loving, a meditation on the fragments left behind when the heart breaks and the self <b>dissolves</b>.<br><br>Each verse here is a shard of something shattered—moments of vulnerability, illusions of a perfect future, and the cold reality of loss. Written in the shadow of heartbreak, these poems trace the descent from summer’s warmth to winter’s chill, capturing the pain of a love that consumes more than it gives. They are the echoes of a mind turned against itself, a soul grappling with the wreckage of what could have been.<br><br><b>A Letdown</b> delves into the price of devotion, the haunting presence of memory, and the quiet resignation of a future unseen. This book is for those who have paid love’s toll, who have felt the sting of betrayal or abandonment, and who have wondered if they’ll ever reclaim the pieces of themselves lost along the way.<br><br>These words stand as proof of survival—not triumph, but the persistence to feel, even when it hurts.",
                 pdf: "pdfs/A Letdown.pdf"
             },
             "Drunk Off Her": {
                 cover: "Drunk OFF her.jpeg",
-                intro: "Drift through a haze of longing, where memories of her linger like a bittersweet intoxicant, binding a poet to a love that burns bright yet slips away like sand through desperate hands.",
+                intro: "Love can intoxicate, consume, and leave us staggering through its aftermath. <b>Drunk Off Her</b> is not just a collection of poems—it is an emotional odyssey, a descent into the <b>euphoria</b> and <b>agony</b> of a love that lingers like a hangover, refusing to let go.<br><br>Each poem here is a pulse of memory, a cry of longing, and a reckoning with the ghosts of a past that won’t fade. They are written in the haze of heartbreak, in the clarity of dreams, and in the quiet of a mind searching for itself amid the ruins of another. This collection captures the thrill of love’s highs, the sting of its betrayals, and the slow crawl toward healing—or perhaps, toward forgetting.<br><br><b>Drunk Off Her</b> explores the complexity of attachment, the blur between reality and illusion, and the struggle to release a lover who has become both muse and nemesis. It is for those who have been drunk on someone, who have lost themselves in the pursuit, and who have questioned whether love is salvation or a sentence.<br><br>These pages don’t offer escape. They are a mirror for those brave enough to face the intoxication of their own hearts.",
                 pdf: "pdfs/DRUNK OFF HER.pdf"
             },
             "You and the Moon": {
                 cover: "You are my moonlight.jpeg",
-                intro: "Wander a lover’s celestial reverie, where the moon and tides mirror a heart torn between devotion and distance, whispering vows to a beloved just out of reach.",
+                intro: "Love across distance is a quiet ache, a light that flickers but never fully fades. <b>You and the Moon</b> is not just a collection of poems and thoughts—it is a tender offering, a series of letters written to a beloved who exists beyond reach, a testament to the enduring power of <b>devotion</b>.<br><br>Each piece here is a whisper from the heart, penned in moments of solitude by the ocean’s edge or beneath a moonlit sky. They capture the warmth of longing, the weight of separation, and the beauty of a love that transforms even the darkest nights. These words are raw, unpolished, and deeply personal—a journal of emotions poured onto paper to keep the writer alive, to keep the beloved close.<br><br><b>You and the Moon</b> weaves a tapestry of romantic yearning, natural imagery, and the quiet hope of reunion. It is for those who have loved from afar, who have found solace in the thought of another, and who have felt the universe shift with every memory of their muse.<br><br>This collection doesn’t promise closure. It is a bridge across the distance, a light to guide those who refuse to let love dim.",
                 pdf: "pdfs/You and the Moon.pdf"
             },
             "A Fool's Dream": {
                 cover: "A Fools Dream.jpeg",
-                intro: "Plunge into the abyss of a restless mind, where dreams crumble like ash and ghosts of doubt haunt every page, leaving only echoes of what might have been.",
+                intro: "Dreams are the refuge of fools—beautiful illusions that cradle us until reality wakes us with its cold touch. <b>A Fool's Dream</b> is not just a collection of poems—it is a haunting exploration of the chasm between longing and truth, a quiet lament for the <b>unreachable</b> and the <b>unfulfilled</b>.<br><br>Each poem here is a whisper from a soul caught in the twilight of hope and despair. They are born from the ache of unwritten words, the weight of a past that drifts out of reach, and the torment of a self that haunts its own shadows. This collection dances with the ghosts of dreams—illusions of love, connection, and meaning that shimmer just beyond grasp, only to dissolve in the light of day.<br><br><b>A Fool's Dream</b> delves into the depths of despair, the sting of distance, and the bittersweet companionship of darkness. It is for those who have chased visions they could never hold, who have felt the sting of being a letdown to themselves and others, and who have wondered if their existence is more illusion than real.<br><br>These pages offer no awakening. They are a mirror for the dreamer, a quiet elegy for the fool who dares to believe in what might never be.",
                 pdf: "pdfs/A Fool's Dream.pdf"
             }
         };
@@ -267,7 +270,7 @@
         document.getElementById('bookTitle').textContent = title || 'Book Not Found';
         document.getElementById('bookCover').src = book.cover || 'poetry.png';
         document.getElementById('bookCover').alt = `${title} - Poetry by Iron Heist`;
-        document.getElementById('bookIntro').textContent = book.intro || 'No introduction available.';
+        document.getElementById('bookIntro').innerHTML = book.intro || 'No introduction available.';
         document.title = `${title} | Iron Heist (John Colt)`;
         
         // Update Open Graph and Twitter meta tags
@@ -292,5 +295,5 @@
             if (localStorage.getItem('darkMode') === 'true') toggleDarkMode();
         });
     </script>
-</body>
-</html>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'929ae898693c450d',t:'MTc0MzU0MDA5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</html>	
