--- a/book-details.html
+++ b/book-details.html
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
 
     <title>Book Details | Iron Heist (John Colt)</title>
-    <link rel="icon" href="poetry.png" type="image/x-icon" />
+    <link rel="icon" href="1.png" type="image/x-icon" />
     <link rel="preload" href="KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="BG 1.jpg" as="image">
     
