--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iron Heist Poetry Viewer</title>
-    <link rel="icon" href="poetry.png" type="image/x-icon" />
+    <link rel="icon" href="1.png" type="image/x-icon" />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Iron Heist Poetry Viewer">
     <meta property="og:description" content="Read soul-stirring poetry by Iron Heist (John Colt).">
