--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </script>
 
     <title>My Poetry Collection | Iron Heist (John Colt)</title>
-    <link rel="icon" href="poetry.png" type="image/x-icon" />
+    <link rel="icon" href="1.png" type="image/x-icon" />
     <link rel="preload" href="KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="BG 1.jpg" as="image">
     <style>
